--- a/web/index.html
+++ b/web/index.html
@@ -29,15 +29,15 @@
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="bertemu" />
+  <meta property="og:title" content="FriendSpeak: Stories That Empower " />
   <meta property="og:description" content="Built with FlutterFlow." />
   <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="bertemu" />
+  <meta name="twitter:title" content="FriendSpeak: Stories That Empower " />
   <meta name="twitter:description" content="Built with FlutterFlow." />
   <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> bertemu </title>
+  <title> FriendSpeak: Stories That Empower  </title>
   <meta name="description" content="Built with FlutterFlow." />
     
 
@@ -71,7 +71,7 @@
         },
         onEntrypointLoaded: async function(engineInitializer) {
           // Initialize the Flutter engine
-          let appRunner = await engineInitializer.initializeEngine({});
+          let appRunner = await engineInitializer.initializeEngine({useColorEmoji: true,});
           // Run the app
           await appRunner.runApp();
         }
